--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
     <hr />
 
     <!-- Ranking List Output -->
-    <div id="output">
-      <div>1: Item 1</div>
-      <div>2: Item 2</div>
-      <div>3: Item 3</div>
-    </div>
+    <div id="output"></div>
   </body>
 </html>
